changed packages setup

--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -21,7 +21,7 @@ port=0.0.0.0:9001
 serverurl=unix:///tmp/supervisor.sock
 
 [program:xorg-server]
-command=X -config /etc/X11/xorg.conf -noreset -nolisten tcp -logfile /var/log/Xorg.log
+command=X -config /etc/X11/xorg.conf -noreset -nolisten tcp
 process_name=%(program_name)s
 numprocs=1
 directory=/home/ifaas/
