Updated packer and docker configs

--- a/src/supervisord.conf
+++ b/src/supervisord.conf
@@ -20,6 +20,16 @@ port=0.0.0.0:9001
 [supervisorctl]
 serverurl=unix:///tmp/supervisor.sock
 
+[program:nvidia-smi]
+command=nvidia-smi --loop=5
+process_name=%(program_name)s
+numprocs=1
+directory=/tmp
+autostart=true
+autorestart=true
+startsecs=10
+stopsignal=TERM
+
 [program:xorg-server]
 command=X -config /etc/X11/xorg.conf -noreset -nolisten tcp
 process_name=%(program_name)s
@@ -31,7 +41,7 @@ startsecs=10
 stopsignal=TERM
 stopwaitsecs=5 ; max num secs to wait b4 SIGKILL (default 10)
 user=ifaas
-priority=1
+priority=5
 stopasgroup=true
 killasgroup=true
 
