--- a/src/xorg.conf
+++ b/src/xorg.conf
@@ -1,65 +1,51 @@
-Section "DRI"
-    Mode 0666
+Section "Files"
+    ModulePath "/usr/lib/x86_64-linux-gnu/nvidia/xorg/"
+    ModulePath "/usr/lib/xorg/modules"
 EndSection
 
 Section "ServerLayout"
-    Identifier     "Layout0"
-    Screen      0  "Screen0"
-    InputDevice    "Keyboard0" "CoreKeyboard"
-    InputDevice    "Mouse0" "CorePointer"
-EndSection
-
-Section "Files"
+    Identifier "Layout0"
+    Screen 0 "Screen0"
+    InputDevice "Keyboard0" "CoreKeyboard"
+    InputDevice "Mouse0" "CorePointer"
 EndSection
 
 Section "InputDevice"
     # generated from default
-    Identifier     "Mouse0"
-    Driver         "mouse"
-    Option         "Protocol" "auto"
-    Option         "Device" "/dev/psaux"
-    Option         "Emulate3Buttons" "no"
-    Option         "ZAxisMapping" "4 5"
+    Identifier "Mouse0"
+    Driver "mouse"
+    Option "Protocol" "auto"
+    Option "Device" "/dev/mouse"
+    Option "Emulate3Buttons" "no"
+    Option "ZAxisMapping" "4 5"
 EndSection
 
 Section "InputDevice"
     # generated from default
-    Identifier     "Keyboard0"
-    Driver         "kbd"
+    Identifier "Keyboard0"
+    Driver "kbd"
 EndSection
 
 Section "Monitor"
-    Identifier     "Monitor0"
-    VendorName     "Unknown"
-    ModelName      "Unknown"
-    HorizSync       28.0 - 33.0
-    VertRefresh     43.0 - 72.0
-    Option         "DPMS"
-
-    # https://wiki.archlinux.org/index.php/xorg#Setting_DPI_manually
-    Option          "UseEdidDpi" "False"
-    Option          "DPI" "96 x 96"
+    Identifier "Monitor0"
+    VendorName "Unknown"
+    ModelName "Unknown"
+    Option "DPMS"
 EndSection
 
 Section "Device"
-    Identifier     "Device0"
-    Driver         "nvidia"
-    VendorName     "NVIDIA Corporation"
-    #BusID "PCI:6:0:0"
-    Option "AllowEmptyInitialConfiguration"
-	Option "AllowIndirectGLXProtocol" "1"
+    Identifier "Device0"
+    Driver "nvidia"
+    VendorName "NVIDIA Corporation"
+    BusID "PCI:49:0:0"
 EndSection
 
 Section "Screen"
-    Identifier     "Screen0"
-    Device         "Device0"
-    Monitor        "Monitor0"
-    DefaultDepth    24
-    SubSection     "Display"
-        Depth       24
-    #Modes      "1920x1080" "1280x1024" "1024x768"
-    Modes       "1920x1080"
-    Virtual     1920 1080
+    Identifier "Screen0"
+    Device "Device0"
+    Monitor "Monitor0"
+    DefaultDepth 24
+    SubSection "Display"
+        Depth 24
     EndSubSection
-	Option "AllowIndirectGLXProtocol" "1"
 EndSection
